Add endpoint to fetch clients by team and day, and implement Google Maps integration in navigation view needs some fixing

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/google.maps": "^3.58.1",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
